--- a/ios/testng-examples/browserstack.yml
+++ b/ios/testng-examples/browserstack.yml
@@ -5,7 +5,7 @@ buildName: NOW-MOBILE-TEST
 buildIdentifier: '#${BUILD_NUMBER}'
 framework: testng
 source: testng:appium-sample-sdk:v1.1
-app: ${BROWSERSTACK_APP_ID} || bs://sample.app
+app: ${APP_URL} || bs://sample.app
 parallelsPerPlatform: 1
 percy: true
 percyCaptureMode: auto
