--- a/ios/testng-examples/browserstack.yml
+++ b/ios/testng-examples/browserstack.yml
@@ -2,6 +2,9 @@ userName: $BROWSERSTACK_USERNAME
 accessKey: $BROWSERSTACK_ACCESS_KEY
 framework: testng
 browserstackLocal: true
+browserStackLocalOptions:
+  localIdentifier: 'browserstack-now-local'
+  force: true
 buildName: ${BROWSERSTACK_BUILD_NAME}
 buildIdentifier: '#${BUILD_NUMBER}'
 projectName: ${BROWSERSTACK_PROJECT_NAME}
